# bevy-dynamic-linking

./: Cargo.toml  readme.md
.github/workflows/: build.yml
src/: main.rs
